FAQ Page Update
Updated FAQ Page

--- a/qa.html
+++ b/qa.html
@@ -4,13 +4,78 @@
 <head>
 <link rel="stylesheet" type="text/css" href="style.css">
 <link rel="icon" href="question.png">
+<script src="collapsible.js"></script>
 </head>
 
 <!--div "resizeable" makes the content resize with screen size-->
 <div class="resizeable">
 <!--Sets up buttons at the top of the screen-->
+<a href="resources.html"><button class="button">Resources</button></a>
 <a href="qa.html"><button class="button">FAQ</button></a>
 <a href="about.html"><button class="button">About</button></a>
 <a href="home.html"><button class="button">Home</button></a>
 <br>
 <br>
+
+<!--div add container for header image and text that floats over header image-->
+<div class="container">
+  <img src="faqHeader.png" alt="faqHeader" class="headerImage" style="width:100%;">
+  <div class="centered">FAQ</div>
+</div>
+
+<button type="button" class="collapsible">How do I find a period pal in my area?</button>
+<div class="content">
+  <p>Please fill out the "Request a Period Pal" form on the <a href="home.html">home</a> page to find period pals in your area!</p>
+</div>
+
+<br>
+
+<button type="button" class="collapsible">How do I sign up to provide menstrual products?</button>
+<div class="content">
+  <p>Fill out the "Sign Up to be a Period Pal" on the <a href="home.html">home</a> page. Thank you for being awesome!</p>
+</div>
+
+<br>
+
+<button type="button" class="collapsible">How do I contact my period pal?</button>
+<div class="content">
+  <p>If we locate a period pal in your area, we will text you at your designated phone number and provide you will your period pal's contact information!</p>
+</div>
+
+<br>
+
+<button type="button" class="collapsible">I would love to help those in the LGBTQIA+ community with their needs! How can I help?</button>
+<div class="content">
+  <p>When you sign up to be a period pal, please check the optional box that indicates that you are an ally. Fill out the "Sign Up to be a Period Pal" on the <a href="home.html">home</a> page. Thank you for being awesome!</p>
+</div>
+
+<br>
+
+<button type="button" class="collapsible">If I sign up, is my phone number secure?</button>
+<div class="content">
+  <p>Yes, we value your personal privacy, and we work our hardest to make sure that all information you provide us is not shared with other users. Your phone number will be aliased when your period pal is contacted.</p>
+</div>
+
+<br>
+
+</div>
+</html>
+
+
+<!-- Script for toggling the collapsible sections -->
+<script>
+var coll = document.getElementsByClassName("collapsible");
+var i;
+
+for (i = 0; i < coll.length; i++) {
+  coll[i].addEventListener("click", function() {
+    this.classList.toggle("active");
+    var content = this.nextElementSibling;
+    if (content.style.display === "block") {
+      content.style.display = "none";
+    } else {
+      content.style.display = "block";
+    }
+  });
+}
+</script>
