--- a/resources.html
+++ b/resources.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>About Exclamation Point</title>
+<title>Resources</title>
 <head>
 <link rel="stylesheet" type="text/css" href="style.css">
 <link rel="icon" href="about.png">
