About Page Update
Updated about page with general information

--- a/about.html
+++ b/about.html
@@ -16,5 +16,16 @@
 <br>
 <br>
 
+<!--div add container for header image and text that floats over header image-->
+<div class="container">
+  <img src="aboutHeader.png" alt="aboutHeader" class="headerImage" style="width:100%;">
+  <div class="centered">About Our Cause</div>
+</div>
+
+<br>
+<br>
+
+<img style="float: left; margin: 0px 15px 15px 0px;" src="smile.png" width="300" /><h1>Founded in 2020 at PearlHacks, ! Point is an organization that aims to simplify the process of borrowing menstrual supplies for women in need. By linking women to one another, we hope to assist those who are in need of menstrual supplies. </h1><br style="clear: both;" />
+
 </div>
 </html>
