--- a/public/about.html
+++ b/public/about.html
@@ -25,7 +25,7 @@
 <br>
 <br>
 
-<img style="float: left; margin: 0px 15px 15px 0px;" src="smile.png" width="300" /><h1>Founded in 2020 at PearlHacks, ! Point is an organization that aims to simplify the process of borrowing menstrual supplies for women in need. By linking women to one another, we hope to assist those who are in need of menstrual supplies. </h1><br style="clear: both;" />
+<img class="aboutimg1" src="smile.png" width="300" /><h1 class="genAbout">Founded in 2020 at PearlHacks, ! Point is an organization that aims to simplify the process of borrowing menstrual supplies for women in need. By linking women to one another, we hope to assist those who are in need of menstrual supplies. </h1><br style="clear: both;" />
 
 </div>
 </html>
