--- a/public/resources.html
+++ b/public/resources.html
@@ -16,5 +16,20 @@
 <br>
 <br>
 
+<!--div add container for header image and text that floats over header image-->
+<div class="container">
+  <img src="resourcesHeader.png" alt="resourcesHeader" class="headerImage" style="width:100%;">
+  <div class="centered">Resources</div>
+</div>
+
+<div class="list">
+<ol>
+<li><a href="https://www.goauntflow.com/">Aunt Flow</a></li>
+<li><a href="https://www.freethetampons.org/">Free the Tampons</a></li>
+<li><a href="https://isupportthegirls.org/locations/">I Support the Girls</a></li>
+</ol>
+</div>
+
+
 </div>
 </html>
