--- a/public/qa.html
+++ b/public/qa.html
@@ -12,7 +12,7 @@
 <!--Sets up buttons at the top of the screen-->
 <a href="resources.html"><button class="button">Resources</button></a>
 <a href="qa.html"><button class="button">FAQ</button></a>
-<a href="about.html"><button class="button">About</button></a>
+<a href="request.html"><button class="button">Request</button></a>
 <a href="home.html"><button class="button">Home</button></a>
 <br>
 <br>
@@ -25,7 +25,7 @@
 
 <button type="button" class="collapsible">How do I find a period pal in my area?</button>
 <div class="content">
-  <p>Please fill out the "Request a Period Pal" form on the <a href="home.html">home</a> page to find period pals in your area!</p>
+  <p>Please fill out the "Request a Period Pal" form on the <a href="request.html">home</a> page to find period pals in your area!</p>
 </div>
 
 <br>
