--- a/public/resources.html
+++ b/public/resources.html
@@ -11,7 +11,7 @@
 <!--Sets up buttons at the top of the screen-->
 <a href="resources.html"><button class="button">Resources</button></a>
 <a href="qa.html"><button class="button">FAQ</button></a>
-<a href="about.html"><button class="button">About</button></a>
+<a href="request.html"><button class="button">Request</button></a>
 <a href="home.html"><button class="button">Home</button></a>
 <br>
 <br>
