General Updates to All Pages

--- a/public/request.html
+++ b/public/request.html
@@ -3,6 +3,7 @@
 <title>Request Products</title>
 <head>
 <link rel="stylesheet" type="text/css" href="style.css">
+<link href="https://fonts.googleapis.com/css?family=Glass+Antiqua&display=swap" rel="stylesheet">
 <link rel="icon" href="about.png">
 </head>
 
@@ -11,6 +12,7 @@
 <!--Sets up buttons at the top of the screen-->
 <a href="resources.html"><button class="button">Resources</button></a>
 <a href="qa.html"><button class="button">FAQ</button></a>
+<a href="signup.html"><button class="button">Sign-Up</button></a>
 <a href="request.html"><button class="button">Request</button></a>
 <a href="home.html"><button class="button">Home</button></a>
 <br>
@@ -19,7 +21,7 @@
 <!--div add container for header image and text that floats over header image-->
 <div class="container">
   <img src="aboutHeader.png" alt="aboutHeader" class="headerImage" style="width:100%;">
-  <div class="centered">Request Products</div>
+  <div class="centered">Request Form</div>
 </div>
 
 <br>
@@ -42,10 +44,10 @@
     <br>
 
     <label for="location">Location</label>
-    <input type="text" id="location" name="location" placeholder="Describe your current location">
+    <input type="text" id="location" name="location" placeholder="Describe your current location (Ex. UNC Chapel Hill)">
 
     <label for="specRequest">Special Requests</label>
-    <input type="text" id="specRequest" name="specRequest" placeholder="Describe anything else you may need">
+    <input type="text" id="specRequest" name="specRequest" placeholder="Describe anything else you may need (Ex. Extra Long Pads)">
 
     <button id="padRequestButton">Find a Period Pal!</button>
 </div>
