--- a/public/signup.html
+++ b/public/signup.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
+
 <html>
-<title>Resources</title>
+<title>Sign-Up</title>
 <head>
-<link rel="stylesheet" type="text/css" href="style.css">
-<link href="https://fonts.googleapis.com/css?family=Glass+Antiqua&display=swap" rel="stylesheet">
-<link rel="icon" href="about.png">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Glass+Antiqua&display=swap" rel="stylesheet">
+    <link rel="icon" href="check.png">
 </head>
 
 <!--div "resizeable" makes the content resize with screen size-->
@@ -20,16 +21,8 @@
 
     <!--div add container for header image and text that floats over header image-->
     <div class="container">
-      <img src="resourcesHeader.png" alt="resourcesHeader" class="headerImage" style="width:100%;">
-      <div class="centered">Resources</div>
-    </div>
-
-    <div class="list">
-    <ol>
-    <li><a href="https://www.goauntflow.com/">Aunt Flow</a></li>
-    <li><a href="https://www.freethetampons.org/">Free the Tampons</a></li>
-    <li><a href="https://isupportthegirls.org/locations/">I Support the Girls</a></li>
-    </ol>
+      <img src="homeHeader.png" alt="homeHeader" class="headerImage" style="width:100%;">
+      <div class="centered">Sign-Up Form</div>
     </div>
 
 </div>
