--- a/public/home.html
+++ b/public/home.html
@@ -10,19 +10,20 @@
 
 <!--div "resizeable" makes the content resize with screen size-->
 <div class="resizeable">
-<!--Sets up buttons at the top of the screen-->
-<a href="resources.html"><button class="button">Resources</button></a>
-<a href="qa.html"><button class="button">FAQ</button></a>
-<a href="request.html"><button class="button">Request</button></a>
-<a href="home.html"><button class="button">Home</button></a>
-<br>
-<br>
+    <!--Sets up buttons at the top of the screen-->
+    <a href="resources.html"><button class="button">Resources</button></a>
+    <a href="qa.html"><button class="button">FAQ</button></a>
+    <a href="signup.html"><button class="button">Sign-Up</button></a>
+    <a href="request.html"><button class="button">Request</button></a>
+    <a href="home.html"><button class="button">Home</button></a>
+    <br>
+    <br>
 
-<!--div add container for header image and text that floats over header image-->
-<div class="container">
-  <img src="homeHeader.png" alt="homeHeader" class="headerImage" style="width:100%;">
-  <div class="centered">Welcome to !</div>
-</div>
+    <!--div add container for header image and text that floats over header image-->
+    <div class="container">
+      <img src="homeHeader.png" alt="homeHeader" class="headerImage" style="width:100%;">
+      <div class="centered">Welcome to !</div>
+    </div>
 
 </div>
 </html>
