Fix Print Issue

--- a/public/signup.html
+++ b/public/signup.html
@@ -21,7 +21,7 @@
 
     <!--div add container for header image and text that floats over header image-->
     <div class="container">
-      <img src="homeHeader.png" alt="homeHeader" class="headerImage" style="width:100%;">
+      <img src="signupHeader.png" alt="signupHeader" class="headerImage" style="width:100%;">
       <div class="centered">Sign-Up Form</div>
     </div>
 
