Reformat home page

--- a/public/qa.html
+++ b/public/qa.html
@@ -4,6 +4,7 @@
 <head>
 <link rel="stylesheet" type="text/css" href="style.css">
 <link href="https://fonts.googleapis.com/css?family=Glass+Antiqua&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
 <link rel="icon" href="question.png">
 <script src="collapsible.js"></script>
 </head>
@@ -34,7 +35,7 @@
 
   <button type="button" class="collapsible">How do I sign up to provide menstrual products?</button>
   <div class="content">
-    <p>Fill out the "Sign Up to be a Period Pal" on the <a href="home.html">home</a> page. Thank you for being awesome!</p>
+    <p>Fill out the "Sign Up to be a Period Pal" on the <a href="signup.html">Sign-Up</a> page. Thank you for being awesome!</p>
   </div>
 
   <br>
