--- a/public/resources.html
+++ b/public/resources.html
@@ -4,6 +4,7 @@
 <head>
 <link rel="stylesheet" type="text/css" href="style.css">
 <link href="https://fonts.googleapis.com/css?family=Glass+Antiqua&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
 <link rel="icon" href="about.png">
 </head>
 
@@ -29,6 +30,8 @@
     <li><a href="https://www.goauntflow.com/">Aunt Flow</a></li>
     <li><a href="https://www.freethetampons.org/">Free the Tampons</a></li>
     <li><a href="https://isupportthegirls.org/locations/">I Support the Girls</a></li>
+    <li><a href="https://thehoneypot.co/collections/menstrual">The Honey Pot</a></li>
+    <li><a href="https://www.girlshelpinggirlsperiod.org/">Girls Helping Girls Period</a></li>
     </ol>
     </div>
 
