Resize Header Images

--- a/public/home.html
+++ b/public/home.html
@@ -22,7 +22,7 @@
 
     <!--div add container for header image and text that floats over header image-->
     <div class="container">
-      <img src="homeHeader.png" alt="homeHeader" class="headerImage" style="width:100%;">
+      <img src="homeHeader.png" alt="homeHeader" class="headerImage" style="width:1423px;height:433px">
       <div class="centered">Welcome to !</div>
     </div>
 
@@ -50,7 +50,7 @@
 
   <div>
     <br>
-    <img class="aboutimg2" src="logo1.png" width="100" />
+    <img class="aboutimg2" src="logo1.png" width="75" />
     <h2 class="genAboutLeft">At-Risk LGBTQIA+ Teens</h2>
     <p class="genAboutLeft">There are many homeless teens who may not have loving families who support them and are unable to afford costly menstruation products.
        There is an estimated 11%-40% of LGBTQIA+ teens that are homeless in the United States. There are also additional risks to transgender teens
