--- a/public/qa.html
+++ b/public/qa.html
@@ -22,7 +22,7 @@
 
   <!--div add container for header image and text that floats over header image-->
   <div class="container">
-    <img src="faqHeader.png" alt="faqHeader" class="headerImage" style="width:100%;">
+    <img src="faqHeader.png" alt="faqHeader" class="headerImage" style="width:1423px;height:433px">
     <div class="centered">FAQ</div>
   </div>
 
