--- a/public/request.html
+++ b/public/request.html
@@ -21,7 +21,7 @@
 
 <!--div add container for header image and text that floats over header image-->
 <div class="container">
-  <img src="aboutHeader.png" alt="aboutHeader" class="headerImage" style="width:100%;">
+  <img src="aboutHeader.png" alt="aboutHeader" class="headerImage" style="width:1423px;height:433px">
   <div class="centered">Request Form</div>
 </div>
 
