--- a/public/qa.html
+++ b/public/qa.html
@@ -61,6 +61,11 @@
 
   <br>
 
+  <div class="footer">
+    <p>© PearlHacks 2020</p>
+    <p>Calista Mei, Cathy Liu, Emily Chang, Julie Wang</p>
+  </div>
+
 </div>
 </html>
 
