--- a/public/resources.html
+++ b/public/resources.html
@@ -35,5 +35,10 @@
     </ol>
     </div>
 
+  <div class="footer">
+    <p>© PearlHacks 2020</p>
+    <p>Calista Mei, Cathy Liu, Emily Chang, Julie Wang</p>
+  </div>
+  
 </div>
 </html>
