--- a/public/signup.html
+++ b/public/signup.html
@@ -48,12 +48,17 @@
         <button id="joinButton">Sign Up to be a Period Pal!</button>
     </div>
 
+  <div class="footer">
+    <p>© PearlHacks 2020</p>
+    <p>Calista Mei, Cathy Liu, Emily Chang, Julie Wang</p>
+  </div>
+
 </div>
 </html>
 
 <script>
 function alertBox() {
-    alert("Thank you for signing up to be a period pal! We appreciate your support for women around you!");
+    alert("Thank you for signing up to be a period pal! We appreciate your support for those around you!");
 }
 
 document.querySelector('#joinButton').addEventListener('click', alertBox);
