--- a/public/home.html
+++ b/public/home.html
@@ -10,13 +10,14 @@
 </head>
 
 <!--div "resizeable" makes the content resize with screen size-->
-<div class="resizeable">
+<div class="resizeable" id="content">
     <!--Sets up buttons at the top of the screen-->
     <a href="resources.html"><button class="button">Resources</button></a>
     <a href="qa.html"><button class="button">FAQ</button></a>
     <a href="signup.html"><button class="button">Sign-Up</button></a>
     <a href="request.html"><button class="button">Request</button></a>
     <a href="home.html"><button class="button">Home</button></a>
+
     <br>
     <br>
 
@@ -26,7 +27,6 @@
       <div class="centered">Welcome to !</div>
     </div>
 
-</div>
   <h1> <b>Our Mission</b> </h1>
   <div>
     <p style="margin-right: 5vw; margin-left: 5vw">We believe that lack of access to menstrual hygiene products should not prevent ANYONE from reaching their goals or impede their daily lives. Access to menstrual hygiene products is a right, not a privilege. And yet, many go without. Those that are most affected are homeless women or those in the LGBTQIA+ (especially youth) that do not have the money to purchase these expensive products or the support </p>
@@ -70,5 +70,12 @@
       being comfortable in meetings or hyper self-aware of leakage and being unable to focus. We hope to provide security to these
       people in that they can continue with their day without having to panic about not being prepared.</p>
       <br style="clear: both;" />
+  </div>
+
+</div>
+
+  <div class="footer">
+    <p>© PearlHacks 2020</p>
+    <p>Calista Mei, Cathy Liu, Emily Chang, Julie Wang</p>
   </div>
 </html>
