Update Title to Period Pal

--- a/public/home.html
+++ b/public/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <html>
-<title>Exclamation Point</title>
+<title>Period Pal</title>
 <head>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Glass+Antiqua&display=swap" rel="stylesheet">
@@ -24,7 +24,7 @@
     <!--div add container for header image and text that floats over header image-->
     <div class="container">
       <img src="homeHeader.png" alt="homeHeader" class="headerImage" style="width:1423px;height:433px">
-      <div class="centered">Welcome to !</div>
+      <div class="centered">Welcome to Period Pal</div>
     </div>
 
   <h1> <b>Our Mission</b> </h1>
