--- a/public/request.html
+++ b/public/request.html
@@ -59,12 +59,27 @@
 </div>
 <script>
 function sendMessage(){
+  if (document.getElementById("tampon").checked) {
+        typeOfProduct = "Tampon";
+    } else if (document.getElementById("pad").checked) {
+        typeOfProduct = "Pad";
+    } else {
+        typeOfProduct = "Either Pad or Tampon";
+    }
   var xhr = new XMLHttpRequest();
-  xhr.open("POST", "http://exclamation-point-pearlhacks.appspot.com/", true);
+  xhr.open("POST", "https://periodpal-pearlhacks2020.appspot.com/", true);
   xhr.setRequestHeader('Content-Type', 'application/json');
   xhr.setRequestHeader('Access-Control-Allow-Headers', '*');
   xhr.setRequestHeader('Access-Control-Allow-Origin', '*');
-  xhr.send();
+  xhr.send(
+    JSON.stringify({
+      "name" : document.getElementById("fname").value,
+      "item" : typeOfProduct,
+      "phone" : document.getElementById("phone").value,
+      "location" : document.getElementById("location").value,
+      "specRequest" : document.getElementById("specRequest").value
+    })
+  );
 }
 document.querySelector('#padRequestButton').addEventListener('click', sendMessage);
 </script>
