--- a/public/home.html
+++ b/public/home.html
@@ -23,7 +23,7 @@
 
     <!--div add container for header image and text that floats over header image-->
     <div class="container">
-      <img src="homeHeader.png" alt="homeHeader" class="headerImage" style="width:1423px;height:433px">
+      <img src="homeHeader.png" alt="homeHeader" class="headerImage" style="width:100%;">
       <div class="centered">Welcome to Period Pal</div>
     </div>
 
