--- a/public/resources.html
+++ b/public/resources.html
@@ -21,7 +21,7 @@
 
     <!--div add container for header image and text that floats over header image-->
     <div class="container">
-      <img src="resourcesHeader.png" alt="resourcesHeader" class="headerImage" style="width:1423px;height:433px">
+      <img src="resourcesHeader.png" alt="resourcesHeader" class="headerImage" style="width:100%;">
       <div class="centered">Resources</div>
     </div>
 
