--- a/public/signup.html
+++ b/public/signup.html
@@ -22,7 +22,7 @@
 
     <!--div add container for header image and text that floats over header image-->
     <div class="container">
-      <img src="signupHeader.png" alt="signupHeader" class="headerImage" style="width:1423px;height:433px">
+      <img src="signupHeader.png" alt="signupHeader" class="headerImage" style="width:100%;">
       <div class="centered">Sign-Up Form</div>
     </div>
 
