--- a/public/request.html
+++ b/public/request.html
@@ -11,11 +11,11 @@
 <!--div "resizeable" makes the content resize with screen size-->
 <div class="resizeable">
 <!--Sets up buttons at the top of the screen-->
-<a href="resources.html"><button class="button">Resources</button></a>
+<a href="resources.html"><button class="button">RESOURCES</button></a>
 <a href="qa.html"><button class="button">FAQ</button></a>
-<a href="signup.html"><button class="button">Sign-Up</button></a>
-<a href="request.html"><button class="button">Request</button></a>
-<a href="home.html"><button class="button">Home</button></a>
+<a href="signup.html"><button class="button">SIGNUP</button></a>
+<a href="request.html"><button class="button">REQUEST</button></a>
+<a href="home.html"><button class="button">HOME</button></a>
 <br>
 <br>
 
