style changes to home page

--- a/public/home.html
+++ b/public/home.html
@@ -22,54 +22,63 @@
     <br>
 
     <!--div add container for header image and text that floats over header image-->
-    <div class="container">
+    <div class="headerDisplay">
       <img src="homeHeader.png" alt="homeHeader" class="headerImage" style="width:100%;">
       <div class="centered">Welcome to Period Pal</div>
     </div>
 
-  <h1> <b>Our Mission</b> </h1>
-  <div>
-    <p style="margin-right: 5vw; margin-left: 5vw">We believe that lack of access to menstrual hygiene products should not prevent ANYONE from reaching their goals or impede their daily lives. Access to menstrual hygiene products is a right, not a privilege. And yet, many go without. Those that are most affected are homeless women or those in the LGBTQIA+ (especially youth) that do not have the money to purchase these expensive products or the support </p>
+  <br>
+  <div class="container1">
+  <div class="title">
+    <h1> <b>Our Mission</b> </h1>
   </div>
-  <div>
-    <p style="margin-right: 5vw; margin-left: 5vw">In addition, lack of menstrual products may impede daily life by forcing students to have to miss class or cause professionals to be late or miss a meeting. Many of us have experienced the embarrassment of realizing our periods have started, and being insufficiently prepared. We've all had to awkwardly hope that the bathrooms carry free products or we can find a kind-looking stranger that may be carrying extras.</p>
-    <p>With !, we hope to make that process less awkward and facilitate the idea that change begins with people who care to help others.</p>
+  <div class="description">
+    <p style="margin-right: 5vw; margin-left: 5vw">We believe that lack of access to menstrual hygiene products should not prevent ANYONE from reaching their goals or impede their daily lives. Access to menstrual hygiene products is a right, not a privilege. And yet, many go without. Those that are most affected are homeless women and those in the LGBTQIA+ (especially youth) that do not have the money or support to purchase these products. </p>
+  </div>
+  <div class="description">
+    <p style="margin-right: 5vw; margin-left: 5vw">In addition, lack of menstrual products may impede daily life by causing students to miss class and young professionals to be late to meetings. Many of us have experienced the embarrassment and inconvenience of being unprepared when our periods have started. We've all had to awkwardly hope that the bathrooms carry free products or that we can find a kind stranger that may be carrying extras.</p>
+    <p>With Period Pal, we hope to make that interaction less awkward and facilitate the idea that change begins with people who want to help others.</p>
+  </div>
   </div>
 
-  <div>
-    <br>
-    <img class="aboutimg1" src="logo2.png" width="250" />
-    <h2>Homeless Women and LQBTIA+</h2>
-    <p class="genAbout">Menstrual hygeine products are not covered by SNAP or any other welfare program. Not only is a there no resource for free products,
-      reusuable products like the menstrual cup are often not feasible options for many that find it difficult to sanitize or uncomfortable to use.
-      They may resort to unsanitary methods to try to absorb their blood flow that leads to even worse health problems later on.
-      As menstruation can be an incredibly uncomfortable experience and uneasy to talk about, we hope to make it easier for them to reach
+  <br>
+  <div class="container2">
+    <img class="pic" src="logo2.png" width="250" />
+    <div>
+    <h1>Homeless Women and LGBTQIA+</h1>
+    <p class="genAbout">Menstrual hygeine products are not covered by SNAP or any other welfare program. Not only is a there a lack of resources for free products,
+      but also reusuable products like the menstrual cup are often not feasible options for many that find it difficult to sanitize or uncomfortable to use.
+      They may resort to unsanitary methods to try to absorb their blood flow that lead to health problems later on.
+      As menstruation can be an incredibly uncomfortable experience and an uneasy topic to talk about, we hope to make it easier for them to reach
       out and find someone who may have an extra tampon or pad to give them.</p>
-      <br style="clear: both;" />
+    </div>
   </div>
 
-  <div>
-    <br>
-    <img class="aboutimg2" src="logo1.png" width="75" />
-    <h2 class="genAboutLeft">At-Risk LGBTQIA+ Teens</h2>
-    <p class="genAboutLeft">There are many homeless teens who may not have loving families who support them and are unable to afford costly menstruation products.
+  <br>
+
+  <div class="container2">
+    <div>
+    <h1>At-Risk LGBTQIA+ Teens</h1>
+    <p class="genAbout">There are many homeless teens who may not have loving families who support them and are unable to afford costly menstruation products.
        There is an estimated 11%-40% of LGBTQIA+ teens that are homeless in the United States. There are also additional risks to transgender teens
        who may be in transition or unable to afford surgery that also need access to menstrual products with out judgment or fear of persecution.
        We hope to create a safe space of allies for these teens to reach out to and request menstrual products as needed.</p>
-    <br style="clear: both;" />
+    </div>
+    <img class="pic" src="logo1.png" width="100" />
   </div>
 
-  <div>
-    <br>
-    <img class="aboutimg1" src="logo3.png" width="250" />
-    <h2>Daily Needs</h2>
+  <br>
+  <div class="container2">
+    <img class="pic" src="logo3.png" width="200" />
+    <div>
+    <h1>Daily Needs</h1>
     <p class="genAbout">While some of us are more privileged and able to afford such products as needed, many of us can still be unprepared or caught off guard when
       our menstrual cycle starts. A lot of the time, this leads us to frantically look for any kind of free product dispenser or a friend in the
       vicinity who may be able to come rescue us. For students, it means maybe missing class to run home to get products or even embarrassment as
       we hope we do not bleed through our makeshift toilet paper pads before we can get home. For professionals, it means the difference between
       being comfortable in meetings or hyper self-aware of leakage and being unable to focus. We hope to provide security to these
       people in that they can continue with their day without having to panic about not being prepared.</p>
-      <br style="clear: both;" />
+    </div>
   </div>
 
 </div>
