fix header display style

--- a/public/qa.html
+++ b/public/qa.html
@@ -21,7 +21,7 @@
   <br>
 
   <!--div add container for header image and text that floats over header image-->
-  <div class="container">
+  <div class="headerDisplay">
     <img src="faqHeader.png" alt="faqHeader" class="headerImage" style="width:100%;">
     <div class="centered">FAQ</div>
   </div>
