--- a/public/request.html
+++ b/public/request.html
@@ -20,12 +20,11 @@
 <br>
 
 <!--div add container for header image and text that floats over header image-->
-<div class="container">
+<div class="headerDisplay">
   <img src="aboutHeader.png" alt="aboutHeader" class="headerImage" style="width:100%;">
   <div class="centered">Request Form</div>
 </div>
 
-<br>
 <br>
 
 <div class="form">
