--- a/public/resources.html
+++ b/public/resources.html
@@ -20,7 +20,7 @@
     <br>
 
     <!--div add container for header image and text that floats over header image-->
-    <div class="container">
+    <div class="headerDisplay">
       <img src="resourcesHeader.png" alt="resourcesHeader" class="headerImage" style="width:100%;">
       <div class="centered">Resources</div>
     </div>
