--- a/public/request.html
+++ b/public/request.html
@@ -27,6 +27,7 @@
 
 <br>
 
+<div class="container1">
 <div class="form">
     <label for="fname">First Name</label>
     <input type="text" id="fname" name="firstname" placeholder="Your first name">
@@ -35,14 +36,18 @@
     <input type="text" id="phone" name="phone" placeholder="Your phone number without dashes (Ex. 1234567890)">
 
     <label>Select Your Preferred Product</label>
-    <br>
+    <div>
     <input type="radio" id="tampon" name="type" value="tampon">
-    <label for="tampon">Tampon</label><br>
+    <label for="tampon">Tampon</label>
+    </div>
+    <div>
     <input type="radio" id="pad" name="type" value="pad">
-    <label for="pad">Pad</label><br>
+    <label for="pad">Pad</label>
+    </div>
+    <div>
     <input type="radio" id="other" name="type" value="other">
     <label for="other">Either Pad or Tampon</label>
-    <br>
+    </div>
 
     <br>
 
@@ -53,6 +58,7 @@
     <input type="text" id="specRequest" name="specRequest" placeholder="Describe anything else you may need (Ex. Extra Long Pads)">
 
     <button id="padRequestButton">Find a Period Pal!</button>
+</div>
 </div>
 
   <div class="footer">
