--- a/public/resources.html
+++ b/public/resources.html
@@ -24,7 +24,9 @@
       <img src="resourcesHeader.png" alt="resourcesHeader" class="headerImage" style="width:100%;">
       <div class="centered">Resources</div>
     </div>
+    <br>
 
+    <div class="container1">
     <div class="list">
     <ol>
     <li><a href="https://www.goauntflow.com/">Aunt Flow</a></li>
@@ -33,6 +35,7 @@
     <li><a href="https://thehoneypot.co/collections/menstrual">The Honey Pot</a></li>
     <li><a href="https://www.girlshelpinggirlsperiod.org/">Girls Helping Girls Period</a></li>
     </ol>
+    </div>
     </div>
 
   <div class="footer">
