--- a/public/signup.html
+++ b/public/signup.html
@@ -18,34 +18,34 @@
     <a href="request.html"><button class="button">REQUEST</button></a>
     <a href="home.html"><button class="button">HOME</button></a>
     <br>
-    <br>
+
 
     <!--div add container for header image and text that floats over header image-->
     <div class="headerDisplay">
       <img src="signupHeader.png" alt="signupHeader" class="headerImage" style="width:100%;">
       <div class="centered">Sign-Up Form</div>
     </div>
-
-    <br>
     <br>
 
+    <div class="container1">
     <div class="form">
         <label for="fname">First Name</label>
         <input type="text" id="fname" name="firstname" placeholder="Your first name">
 
         <label for="phone">Phone Number</label>
         <input type="text" id="phone" name="phone" placeholder="Your phone number without dashes (Ex. 1234567890)">
-        <br>
 
         <label for="specRequest">Special Notes</label>
         <input type="text" id="specRequest" name="specRequest" placeholder="Describe any special circumstances (Ex. I am often in meetings)">
 
+        <div>
         <input type="checkbox" id="lgbtqia" name="lgbtqia" value="Ally">
         <label for="lgbtqia"> I am an ally or member of the LGBTQIA+ community. (All Inclusive)</label>
-        <br>
+        </div>
         <br>
 
         <button id="joinButton">Sign Up to be a Period Pal!</button>
+    </div>
     </div>
 
   <div class="footer">
